more changes, minors

--- a/PuppyApp/Views/Home/Index.cshtml
+++ b/PuppyApp/Views/Home/Index.cshtml
@@ -1,24 +1,51 @@
 ﻿<div class="jumbotron">
     <h1>Petzy</h1>
-    <p class="lead">It is your free desease GEO tracking. and Vet advizor</p>
+    <p class="lead">If you are tired of institutions lies, about how many pets dead in you zone and what is the common desease. Join this comunity and help us to help you </p>
     <p><a href="~/ClientApp.html" class="btn btn-primary btn-lg">Launch App &raquo;</a></p>
 </div>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <h2>Pet Health Tracking</h2>
         <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
         a broad range of clients, including browsers and mobile devices. ASP.NET Web API
         is an ideal platform for building RESTful applications on the .NET Framework.</p>
+        <p>@Html.ActionLink("Learn More ...", "Index", "Help", new { area = "" }, new { @class = "btn btn-default" }) </p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <h2>Going Mobile</h2>
+        <p>We are planning to deliver mobile app for Android and Apple market in order to gain more comunity members.</p>
         <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
+</div>
+<div class="row">
+    <div class="col-md-6">
         <h2>Community Supported</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+        <p>You are the fundation of this structure, submiting usefull information you can.</p>
         <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <h2>Track System</h2>
+        <p>You as an user will be notified with all kinds of occurrences on any event in your zone. We offer GEO tracking on this event, pulling numbers from each event</p>
+        <p>The Events can be from new user joined the community to a dead of a pet produced by a terminal desease</p>
+        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <h2>Pet History Profile</h2>
+        <p>As you enter information of any kind of event related to pet, we gather all the information for you so you can visualize it in a time line</p>
+        <p>Which also is important to VET in order to give the proper care</p>
+        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-6">
+        <h2>Developer Ready</h2>
+        <p>We offer developers an API, with useful entry points, providing good developement experience, built in the top of our Framework. It is an ideal platform for building RESTful applications</p>
+        <p>@Html.ActionLink("Learn More ...", "Index", "Help", new { area = "" }, new { @class = "btn btn-default" })</p>
     </div>
 </div>
