integrating the app with the site, also adding some Leafletjs library and start working on that path

--- a/PuppyApp/Views/Home/Index.cshtml
+++ b/PuppyApp/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿<div class="jumbotron">
     <h1>Petzy</h1>
     <p class="lead">If you are tired of institutions lies, about how many pets dead in you zone and what is the common desease. Join this comunity and help us to help you </p>
-    <p><a href="~/ClientApp.html" class="btn btn-primary btn-lg">Launch App &raquo;</a></p>
+    <p><a href="~/landing.html" class="btn btn-primary btn-lg">Launch App &raquo;</a></p>
 </div>
 <div class="row">
     <div class="col-md-6">
@@ -23,7 +23,7 @@
     <div class="col-md-6">
         <h2>Community Supported</h2>
         <p>You are the fundation of this structure, submiting usefull information you can.</p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/landing.html">Learn more &raquo;</a></p>
     </div>
 </div>
 <div class="row">
@@ -31,7 +31,7 @@
         <h2>Track System</h2>
         <p>You as an user will be notified with all kinds of occurrences on any event in your zone. We offer GEO tracking on this event, pulling numbers from each event</p>
         <p>The Events can be from new user joined the community to a dead of a pet produced by a terminal desease</p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/landing.html">Learn more &raquo;</a></p>
     </div>
 </div>
 <div class="row">
@@ -39,7 +39,7 @@
         <h2>Pet History Profile</h2>
         <p>As you enter information of any kind of event related to pet, we gather all the information for you so you can visualize it in a time line</p>
         <p>Which also is important to VET in order to give the proper care</p>
-        <p><a class="btn btn-default" href="#">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/landing.html">Learn more &raquo;</a></p>
     </div>
 </div>
 <div class="row">
