Rebranding PUPPZY. Ending implementation for #1. Fixing some other bugs

--- a/PuppyApp/Views/Home/Index.cshtml
+++ b/PuppyApp/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿<div class="jumbotron">
-    <h1>Petzy</h1>
+    <h1>PUPPZY</h1>
     <p class="lead">If you are tired of institutions lies, about how many pets dead in you zone and what is the common desease. Join this comunity and help us to help you </p>
     <p><a href="~/landing.html" class="btn btn-primary btn-lg">Launch App &raquo;</a></p>
 </div>
